--- a/Implementacion/ModuloServidor/SERVER-MODULE-PRESENTATION/WebContent/proveedor/AltaContenido.html
+++ b/Implementacion/ModuloServidor/SERVER-MODULE-PRESENTATION/WebContent/proveedor/AltaContenido.html
@@ -86,6 +86,7 @@
                 <select id="id_subcategoria" class="form-control" >
                 </select>
             </p>
+            <p>Precio<input id="id_precio" class="form-control" type="tel"></input></p>
         </div>        
         <div class="col-md-6">
             <p>Nombre <input id="id_nombre" type="text" class="form-control col-lg-3"></input></p>
@@ -121,7 +122,10 @@
     <br></br>
 
     <div class="well">
-        <p>A continuacion eliga el contenido seguido de las imagenes que van a ir asociadas al mismo.</p>
+        <p>A continuacion eliga el contenido seguido de las imagenes que van a ir asociadas al mismo.
+        En primer lugar debera subir el contenido, luego todas las imagenes asociadas al mismo.
+        Faltan Validaciones asique lea el manual, no sea nabo.
+        </p>
     </div>
 
     <form id="fileupload" action="upload" method="POST" enctype="multipart/form-data">
