ABM de Categorias y Subcategorias funcionando bastante bien. Falta buen testeo.

--- a/Implementacion/ModuloServidor/SERVER-MODULE-PRESENTATION/WebContent/admin/admin.xhtml
+++ b/Implementacion/ModuloServidor/SERVER-MODULE-PRESENTATION/WebContent/admin/admin.xhtml
@@ -37,7 +37,7 @@
 				<li><a href="#">Clientes</a></li>
 				<li><a href="#">Proveedores</a></li>
 				<li><a href="#">Cotizaciones</a></li>
-				<li><a href="#">Comentarios</a></li>
+				<li><a href="/SERVER-MODULE-PRESENTATION/admin/partialComentarios.xhtml">Comentarios</a></li>
 				<li><a href="/SERVER-MODULE-PRESENTATION/admin/partialCategorias.xhtml">Categorias</a></li>
 				<li><a href="/SERVER-MODULE-PRESENTATION/admin/partialSubCategorias.xhtml">Subcategorias</a></li>
 				<li><a href="#">Otros</a></li>
