--- a/Implementacion/ModuloServidor/SERVER-MODULE-PRESENTATION/WebContent/admin/partialComentarios.xhtml
+++ b/Implementacion/ModuloServidor/SERVER-MODULE-PRESENTATION/WebContent/admin/partialComentarios.xhtml
@@ -12,7 +12,7 @@
 		<h:form>
 			<div class="row">
 				<div class="col-md-12">
-					<h2>Gestion de sub categorias</h2>
+					<h2>Aprobar comentarios</h2>
 					
 					<h:commandButton style="float:right" class="btn" action="#{subCategoriaMB.mostrarPanelIngreso}" value="Nuevo">
 						<!--  <h:graphicImage library="images" class="btnNuevo" value="../img/agregarServicio.jpeg" />  -->
