--- a/Implementacion/ModuloServidor/SERVER-MODULE-PRESENTATION/WebContent/admin/partialCategorias.xhtml
+++ b/Implementacion/ModuloServidor/SERVER-MODULE-PRESENTATION/WebContent/admin/partialCategorias.xhtml
@@ -13,7 +13,7 @@
 			<div>
 				<h2>Gestion de categorias</h2>
 				
-				<h:commandButton style="float:right" action="#{categoriaMB.mostrarPanelIngreso}" value="Nuevo">
+				<h:commandButton class="btn" style="float:right" action="#{categoriaMB.mostrarPanelIngreso}" value="Nuevo">
 					<!--  <h:graphicImage library="images" class="btnNuevo" value="../img/agregarServicio.jpeg" />  -->
 				</h:commandButton>
 			</div>
@@ -22,13 +22,6 @@
 					styleClass="order-table" headerClass="order-table-header"
 					rowClasses="order-table-odd-row,order-table-even-row"
 					class="table table-striped">
-	
-					<!-- column header -->
-					<!-- row record -->
-					<h:column>
-						<f:facet name="header">Id</f:facet>
-						#{o.id}
-					</h:column>
 	
 					<h:column>
 						<f:facet name="header">Nombre</f:facet>
@@ -39,14 +32,19 @@
 						<f:facet name="header">Descripcion</f:facet>
 						#{o.descripcion}
 					</h:column>
+					
+					<h:column>
+						<f:facet name="header">Habilitado</f:facet>
+						#{o.habilitadaStr} 
+					</h:column>
 	
 					<h:column>
-						<h:commandButton value="Editar" action="#{categoriaMB.mostrarPanelEditar}" >
+						<h:commandButton class="btn" value="Editar" action="#{categoriaMB.mostrarPanelEditar}" >
 							<f:setPropertyActionListener target="#{categoriaMB.currentCategoria}" value="#{o}" />
 						</h:commandButton>
 					</h:column>
 					<h:column>
-						<h:commandButton action="#{categoriaMB.mostrarPanelEliminar}" value="Eliminar">
+						<h:commandButton class="btn" action="#{categoriaMB.mostrarPanelEliminar}" value="#{o.captionBtnHabilitarDeshabilitar}"> 
 							<f:setPropertyActionListener target="#{categoriaMB.currentCategoria}" value="#{o}" />
 						</h:commandButton>
 					</h:column>
@@ -71,15 +69,17 @@
 									<p>
 										Descripcion <h:inputText value="#{categoriaMB.currentCategoria.descripcion}" type="text" class="col-xs-7 form-control" />
 									</p>
+									<!-- 
 									<p>
 										Habilitada <h:selectBooleanCheckbox value="#{categoriaMB.currentCategoria.habilitada}" type="checkbox"/>
 									</p>
+									 -->
 								</div>
 							</div>
 						</div>
 						<div class="modal-footer">
-								<h:commandButton id="btnConfirmarModificacion" value="Confirmar" action="#{categoriaMB.editarCategoria}" />
-								<h:commandButton value="Cancelar" action="#{categoriaMB.ocultarPanelEditar}" />
+								<h:commandButton class="btn" id="btnConfirmarModificacion" value="Confirmar" action="#{categoriaMB.editarCategoria}" />
+								<h:commandButton class="btn" value="Cancelar" action="#{categoriaMB.ocultarPanelEditar}" />
 						</div>
 					</div>
 				</div>
@@ -102,16 +102,18 @@
 									<p>
 										Descripcion <h:inputText value="#{categoriaMB.nuevaCategoria.descripcion}" type="text" class="col-xs-7 form-control" />
 									</p>
+									<!-- 
 									<p>
 										Habilitada <h:selectBooleanCheckbox value="#{categoriaMB.nuevaCategoria.habilitada}" type="checkbox"/>
 									</p>
+									 -->
 								</div>
 							</div>
 						</div>						
 						<div class="modal-footer">
 							<h:message for="btnConfirmarIngreso" class="error" />
-							<h:commandButton id="btnConfirmarIngreso" value="Confirmar" action="#{categoriaMB.crearCategoria}" />
-							<h:commandButton value="Cancelar" action="#{categoriaMB.ocultarPanelIngreso}" />
+							<h:commandButton class="btn" id="btnConfirmarIngreso" value="Confirmar" action="#{categoriaMB.crearCategoria}" />
+							<h:commandButton class="btn" value="Cancelar" action="#{categoriaMB.ocultarPanelIngreso}" />
 						</div>
 					</div>
 				</div>
@@ -127,13 +129,13 @@
 				<div class="modal-body">
 					<div class="row">
 						<div class="col-md-12 col-xs-10">
-							<h4>¿Seguro que desea eliminar la categoria?</h4>
+							<h4>¿Seguro que desea cambiar el estado de la categoria?</h4>
 						</div>
 					</div>
 				</div>
 				<div class="modal-footer">
-					<h:commandButton value="Confirmar" action="#{categoriaMB.eliminarCategoria}" />
-					<h:commandButton value="Cancelar" action="#{categoriaMB.ocultarPanelEliminar}" />
+					<h:commandButton class="btn" value="Confirmar" action="#{categoriaMB.cambiarEstadoCategoria}" />
+					<h:commandButton class="btn" value="Cancelar" action="#{categoriaMB.ocultarPanelEliminar}" />
 				</div>
 			</div>
 		</div>
