Alta de contenido con version asociada, clase asociativa subir. Aprobar y rechazar contenido en modulo de administracion. Fix de problema de servlet de imagenes.

--- a/Implementacion/ModuloServidor/SERVER-MODULE-PRESENTATION/WebContent/admin/admin.xhtml
+++ b/Implementacion/ModuloServidor/SERVER-MODULE-PRESENTATION/WebContent/admin/admin.xhtml
@@ -33,7 +33,7 @@
 			<ul class="nav nav-list">
 				<li class="nav-header">Administracion</li>
 				<li class="active"><a href="#">Inicio</a></li>
-				<li><a href="#">Contenidos</a></li>
+				<li><a href="/SERVER-MODULE-PRESENTATION/admin/partialContenidos.xhtml">Contenidos</a></li>
 				<li><a href="#">Clientes</a></li>
 				<li><a href="#">Proveedores</a></li>
 				<li><a href="#">Cotizaciones</a></li>
