--- a/Implementacion/ModuloServidor/SERVER-MODULE-PRESENTATION/WebContent/index.html
+++ b/Implementacion/ModuloServidor/SERVER-MODULE-PRESENTATION/WebContent/index.html
@@ -437,6 +437,7 @@
 	                <p><label><input id="id_search-Musica" type="checkbox" checked="true">_Musica</label></p>
 	                <p><label><input id="id_search-Apps" type="checkbox" checked="true">_Apps</label></p>
 	                <p><label><input id="id_search-Video" type="checkbox" checked="true">_Video</label></p>
+	                <p><label><input id="id_search-Pagas" type="checkbox" checked="true">_Pagas</label></p>
 	            </div>
 	            <div class="col-md-12">
 	            	<h4>Categorias</h4>
