--- a/Implementacion/ModuloServidor/SERVER-MODULE-PRESENTATION/WebContent/admin/admin.xhtml
+++ b/Implementacion/ModuloServidor/SERVER-MODULE-PRESENTATION/WebContent/admin/admin.xhtml
@@ -37,10 +37,11 @@
 				<li><a href="#">Clientes</a></li>
 				<li><a href="#">Proveedores</a></li>
 				<li><a href="#">Cotizaciones</a></li>
+				<li><a href="/SERVER-MODULE-PRESENTATION/admin/partialAuditoria.xhtml">Registros de ingreso</a></li>
 				<li><a href="/SERVER-MODULE-PRESENTATION/admin/partialComentarios.xhtml">Comentarios</a></li>
 				<li><a href="/SERVER-MODULE-PRESENTATION/admin/partialCategorias.xhtml">Categorias</a></li>
 				<li><a href="/SERVER-MODULE-PRESENTATION/admin/partialSubCategorias.xhtml">Subcategorias</a></li>
-				<li><a href="#">Otros</a></li>
+				<li><a href="/SERVER-MODULE-PRESENTATION/admin/partialParametros.xhtml">Parametros del sistema</a></li>
 			</ul>	
 		</div>
 		<div class="col-md-10">
