--- a/Implementacion/ModuloServidor/SERVER-MODULE-PRESENTATION/WebContent/index.html
+++ b/Implementacion/ModuloServidor/SERVER-MODULE-PRESENTATION/WebContent/index.html
@@ -5,57 +5,59 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" >
     <meta name="description" content="Bienvenidos al MarketPlace tecnologo, donde ecnotraras todo lo que te imagines y mas.">
 
-	<link rel="stylesheet" type="text/css" href="css/bootstrap.css" media="screen"/>
+	<link rel="stylesheet" type="text/css" href="css/bootstrap.min.css" media="screen"/>
+	<link href="css/bootstrap-glyphicons.css" type="text/css" rel="stylesheet">
+	<!--[if lt IE 9]><script src="js/html5.js"></script><![endif]-->
+	<link href="css/themeProy.css" type="text/css" rel="stylesheet">
 	<link rel="stylesheet" type="text/css" href="css/bootstrap-select.min.css" media="screen"/>
-	
 	<link rel="stylesheet" type="text/css" href="css/market.css" media="screen"/>
 	<link rel="stylesheet" type="text/css" href="css/jquery-ui.css" media="screen"/>
 	<script src="js/jquery.min.js"></script>
 </head>
 
-<body id="cuerpo" class="overlay">
+<body id="cuerpo" class="overlay" style="background-color: whitesmoke;">
+
 <!-- BARRA DE NAVEGACION -->
-	<nav id='caca' class="navbar navbar-default" role="navigation">
-		<div class="navbar-header">
-			<button type="button" class="navbar-toggle" data-toggle="collapse"
-				data-target=".navbar-ex1-collapse">
-				<span class="sr-only">Desplegar navegación</span>
-				<span class="icon-bar"></span>
-				<span class="icon-bar"></span>
-				<span class="icon-bar"></span>
-			</button>
-			<a class="navbar-brand" href="#">Market Place Tecnologo</a>
+<nav id='caca' class="navbar navbar-default navbar-fixed-top" role="navigation">
+	<div class="navbar-header">
+		<button type="button" class="navbar-toggle" data-toggle="collapse"
+			data-target=".navbar-ex1-collapse">
+			<span class="sr-only">Desplegar navegación</span>
+			<span class="icon-bar"></span>
+			<span class="icon-bar"></span>
+			<span class="icon-bar"></span>
+		</button>
+		<a class="navbar-brand" href="#">Market Place Tecnologo</a>
+	</div>
+  <div class="collapse navbar-collapse navbar-ex1-collapse"> 
+    <ul class="navbar-form navbar-left" role="search">
+		<div class="form-group col-xs-6">
+			<input id="input-busqueda" type="search" class="form-control input-md" placeholder="Buscar">
 		</div>
-<!-- Agrupar los enlaces de navegación, los formularios y cualquier
-	   otro elemento que se pueda ocultar al minimizar la barra -->
-	  <div class="collapse navbar-collapse navbar-ex1-collapse"> 
-	    <ul class="navbar-form navbar-left" role="search">
-			<div class="form-group col-xs-6">
-				<input id="input-busqueda" type="search" class="form-control" placeholder="Buscar">
-			</div>
-			<ul class="btn-group">
-				<button onclick="buscarContenidos();" class="btn btn-primary barraBusquedaHome" style="margin-top: initial;">
-					<span class="glyphicon glyphicon-search"></span> Buscar</button>
-				<button class="btn btn-primary dropdown-toggle"	type="button" onclick="mostrarElemento('configurarBusqueda',true)"><span class="glyphicon glyphicon-cog"></span></button>
-			</ul>
+		<ul class="btn-group">
+			<button onclick="buscarContenidos();" class="btn btn-primary" style="margin-top: initial;">
+				<span class="glyphicon glyphicon-search"></span> Buscar</button>
+			<button class="btn btn-primary dropdown-toggle"	type="button" onclick="verModales('configurarBusqueda');/*mostrarElemento('configurarBusqueda',true)*/"><span class="glyphicon glyphicon-cog"></span></button>
 		</ul>
-	    <ul class="nav navbar-nav navbar-right" id="Login-Registro-Div">
-			<a href="#" class="btn btn-primary barraBusquedaHome" role="button" data-toggle="dropdown">Registrarse</a>
-			<ul class="dropdown-menu">
-				<li><a href="#" onclick="setRegistroTipo('proveedor');mostrarElemento('registroUsuario',true)">Soy Proveedor</a></li>
-				<li><a href="#" onclick="setRegistroTipo('cliente');mostrarElemento('registroUsuario',true)">Soy Cliente</a></li>
-			</ul>
-			<button class="btn btn-primary barraBusquedaHome" onclick="mostrarElemento('loginUsuario',true)">Login</button>
-	    </ul>
-		<ul class="col-md-2 pull-right" id="Nick-Logout-Div" hidden>
-			<a href="#" class="nick">nick</a>
-			<a href="#" onclick="logoutUsuario()">(Logout)</a>
+	</ul>
+    <ul class="nav navbar-nav navbar-right" id="Login-Registro-Div">
+		<a href="#" class="btn btn-primary barraBusquedaHome" role="button" data-toggle="dropdown">Registrarse</a>
+		<ul class="dropdown-menu">
+			<li><a href="#" onclick="setRegistroTipo('proveedor');verModales('registroUsuario')">Soy Proveedor</a></li>
+			<li><a href="#" onclick="setRegistroTipo('cliente');verModales('registroUsuario')">Soy Cliente</a></li>
 		</ul>
-	</nav>
+		<button class="btn btn-primary barraBusquedaHome" onclick="mostrarElemento('loginUsuario',true)">Login</button>
+    </ul>
+	<ul class="col-md-2 pull-right" id="Nick-Logout-Div" hidden>
+		<a href="#" class="nick">nick</a>
+		<a href="#" onclick="logoutUsuario()">(Logout)</a>
+	</ul>
+</nav>
 
 	<div class="col-md-12" style="height:50px;"></div>
 
-<div id="con-tenedor" class="container">
+<div id="con-tenedor" class="row">
+
 <!-- APPS APPS APPS APPS APPS APPS APPS APPS APPS APPS APPS APPS APPS -->	
 	<div class="col-md-12 divContenidosInicial color1Inicio" style="background-image: url(img/appsProy.png);">
 		<h2 class="col-md-12 pull-right styleTits" style="color:black; text-align: left;">Aplicaciones</h2>
@@ -333,131 +335,7 @@
 
 </div>
 
-<!-- LOGIN DE USUARIO -->
-<div id="loginUsuario" class="modal loginDiv modal-dialog" style="width:300px">
-    <div class="modal-content">
-        <div class="modal-header">
-            <button type="button" class="close" data-dismiss="modal" aria-hidden="true"
-            onclick="ocultarElemento('loginUsuario')">X</button>
-            	<h3>Iniciar Sesion</h3>
-        </div>
-        <div class="modal-body">
-            <div class="row">
-                <div class="col-md-12 col-xs-10">
-                    	<h4>Datos de Usuario</h4>
-                    <p>Correo
-                        <input type="text" class="col-xs-7 form-control" id="loginCorreo"
-                        autocomplete="on"/>
-                    </p>
-                    <p>Contraseña
-                        <input type="password" class="col-xs-7 form-control" id="loginPass"/>
-                    </p>
-                </div>
-            </div>
-        </div>
-        <div class="modal-footer">
-            <button type="button" data-dismiss="modal" class="btn btn-default" onclick="ocultarElemento('loginUsuario')">Cerrar</button>
-            <button type="button" class="btn btn-primary" onclick="IniciarSesion()">Confirmar</button>
-        </div>
-    </div>
-</div>
-
-<!-- REGISTRO DE USUARIO -->
-<div id="registroUsuario" class="modal registerDiv modal-dialog">
-    <div class="modal-content">
-        <div class="modal-header">
-            <button type="button" class="close" data-dismiss="modal" aria-hidden="true"
-            onclick="ocultarElemento('registroUsuario')">X</button>
-             <h3>Registro de Usuario</h3>
-        </div>
-        <div class="modal-body">
-            <div class="row">
-                <div class="col-md-6 col-xs-5">
-                    	<h4>Datos de Usuario</h4>
-                    <p>Correo
-                        <input type="email" class="col-xs-10 form-control" id="inputCorreo"
-                        autocomplete="on"/>
-                    </p>
-                    <p>Contraseña
-                        <input type="password" class="col-xs-10 form-control" id="inputPass"/>
-                    </p>
-                    <p>Contraseña
-                        <input type="password" class="col-xs-10 form-control" id="inputPass2"/>
-                    </p>
-                    <p>Nombre Usuario
-                        <input type="text" class="col-xs-10 form-control" id="inputNick"
-                        autocomplete="autocomplete"/>
-                    </p>
-                    <p id="sitioWeb_p">Sitio Web
-                        <input type="text" class="col-xs-10 form-control" id="inputWeb"/>
-                    </p>
-                </div>
-                <div class="col-md-6 col-xs-5">
-                    	<h4>Datos Personales</h4>
-                    <p>Nombres
-                        <input type="text" class="form-control col-xs-10" id="inputNombre"/>
-                    </p>
-                    <p>Apellidos
-                        <input type="text" class="form-control col-xs-10" id="inputApellido"/>
-                    </p>
-                    <p>Orientacion Sexual
-                        <select id="inputSexo" class="selectpicker form-control col-xs-10">
-                            <option value="masculino" selected="selected">Hombre</option>
-                            <option value="femenino">Mujer</option>
-                        </select>
-                    </p>
-                    <p>Fecha de Nacimiento
-                        <input type="text" class="col-xs-10 form-control" id="inputFecha"/>
-                    </p>
-                    <p>Telefono Movil
-                        <input type="tel" class="col-xs-10 form-control" id="inputTel"
-                        onkeypress="return onlyNumbersDano(event)" />
-                    </p>
-                </div>
-            </div>
-        </div>
-        <div class="modal-footer">
-            <button type="button" data-dismiss="modal" class="btn btn-default" onclick="ocultarElemento('registroUsuario')">Cerrar</button>
-            <button type="button" class="btn btn-primary" onclick="crearMiembro()">Confirmar</button>
-        </div>
-    </div>
-</div>
-
-<!-- CONFIGURAR BUSQUEDA -->
-<div id="configurarBusqueda" class="modal modal-dialog">
-	<div class="modal-content">
-		<div class="modal-header">
-			<button onclick="ocultarElemento('configurarBusqueda')" type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
-			<h4 class="modal-title">Modal title</h4>
-		</div>
-		<div class="modal-body">
-			<div class="col-md-12">
-	            <div class="col-md-12 row" style="margin-right: auto;margin-left: auto;">
-	            	<h4>Tipos</h4>
-	            	<div class="col-md-6">
-		                <p><label><input id="id_search-Libros" type="checkbox" checked="true">_Libros</label></p>
-		                <p><label><input id="id_search-Musica" type="checkbox" checked="true">_Musica</label></p>
-		                <p><label><input id="id_search-Apps" type="checkbox" checked="true">_Apps</label></p>
-	            	</div>
-	            	<div class="col-md-6">
-		                <p><label><input id="id_search-Video" type="checkbox" checked="true">_Video</label></p>
-		                <p><label><input id="id_search-Pagas" type="checkbox" checked="true">_Pagas</label></p>
-	            	</div>
-	            </div>
-	            <div class="col-md-12">
-	            	<h4>Categorias</h4>
-					<select class="selectpicker show-tick form-control" multiple data-live-search="true"id="multiplesCat" data-container="body">
-					</select>
-	            </div>
-			</div>
-		</div>
-		<div class="modal-footer">
-			<button onclick="ocultarElemento('configurarBusqueda')" type="button" class="btn btn-default" data-dismiss="modal">Close</button>
-			<button onclick="actualizarParametrosBusqueda()" type="button" class="btn btn-primary">Guardar Cambios</button>
-		</div>
-	</div>
-</div>
-
+<!-- RESULTADOS DE BUSQUEDA -->
 <div id="resultadoBusqueda" class="container hide">
     <table class="table table-hover">
         <thead>
@@ -587,14 +465,140 @@
 </body>
 
 
+<!-- CONFIGURAR BUSQUEDA -->
+<div id="configurarBusqueda" class="modal fade" tabindex="-1" role="dialog">
+	<div class="modal-dialog">
+		<div class="modal-content">
+			<div class="modal-header">
+			<button type="button" class="close" data-dismiss="modal">×</button>
+				<h3>Configurar Busqueda</h3>
+			</div>
+			<div class="modal-body">
+		        <div class="col-md-12">
+		            <div class="col-md-12 row" style="margin-right: auto;margin-left: auto;">
+		                <h4>Tipos</h4>
+		                <div class="col-md-6">
+		                    <p><label><input id="id_search-Libros" type="checkbox" checked="true">_Libros</label></p>
+		                    <p><label><input id="id_search-Musica" type="checkbox" checked="true">_Musica</label></p>
+		                    <p><label><input id="id_search-Apps" type="checkbox" checked="true">_Apps</label></p>
+		                </div>
+		                <div class="col-md-6">
+		                    <p><label><input id="id_search-Video" type="checkbox" checked="true">_Video</label></p>
+		                    <p><label><input id="id_search-Pagas" type="checkbox" checked="true">_Pagas</label></p>
+		                </div>
+		            </div>
+		            <div class="col-md-12">
+	                	<h4>Categorias</h4>
+		                <select class="selectpicker show-tick form-control" multiple="" data-live-search="true" id="multiplesCat" data-container="body"></select>
+		            </div>
+		        </div>
+			</div>
+			<div class="modal-footer">
+				<button class="btn" data-dismiss="modal">Close</button>
+		        <button onclick="actualizarParametrosBusqueda()" type="button" class="btn btn-primary">Guardar Cambios</button>	
+			</div>
+		</div>
+	</div>
+</div>
 
+<!-- REGISTRO DE USUARIO -->
+<div id="registroUsuario" class="modal fade" tabindex="-1" role="dialog">
+	<div class="modal-dialog">
+		<div class="modal-content">
+			<div class="modal-header">
+			<button type="button" class="close" data-dismiss="modal">×</button>
+				<h3>Registro de Usuario</h3>
+		</div>
+		<div class="modal-body">
+	            <div class="row">
+	                <div class="col-md-6 col-xs-5">
+	                    	<h4>Datos de Usuario</h4>
+	                    <p>Correo
+	                        <input type="email" class="col-xs-10 form-control" id="inputCorreo"
+	                        autocomplete="on"/>
+	                    </p>
+	                    <p>Contraseña
+	                        <input type="password" class="col-xs-10 form-control" id="inputPass"/>
+	                    </p>
+	                    <p>Contraseña
+	                        <input type="password" class="col-xs-10 form-control" id="inputPass2"/>
+	                    </p>
+	                    <p>Nombre Usuario
+	                        <input type="text" class="col-xs-10 form-control" id="inputNick"
+	                        autocomplete="autocomplete"/>
+	                    </p>
+	                    <p id="sitioWeb_p">Sitio Web
+	                        <input type="text" class="col-xs-10 form-control" id="inputWeb"/>
+	                    </p>
+	                </div>
+	                <div class="col-md-6 col-xs-5">
+	                    	<h4>Datos Personales</h4>
+	                    <p>Nombres
+	                        <input type="text" class="form-control col-xs-10" id="inputNombre"/>
+	                    </p>
+	                    <p>Apellidos
+	                        <input type="text" class="form-control col-xs-10" id="inputApellido"/>
+	                    </p>
+	                    <p>Orientacion Sexual
+	                        <select id="inputSexo" class="selectpicker form-control col-xs-10">
+	                            <option value="masculino" selected="selected">Hombre</option>
+	                            <option value="femenino">Mujer</option>
+	                        </select>
+	                    </p>
+	                    <p>Fecha de Nacimiento
+	                        <input type="text" class="col-xs-10 form-control" id="inputFecha"/>
+	                    </p>
+	                    <p>Telefono Movil
+	                        <input type="tel" class="col-xs-10 form-control" id="inputTel"
+	                        onkeypress="return onlyNumbersDano(event)" />
+	                    </p>
+	                </div>
+	            </div>
+		</div>
+		<div class="modal-footer">
+			<button class="btn" data-dismiss="modal">Cerrar</button>
+	        <button type="button" class="btn btn-primary" onclick="crearMiembro()">Confirmar</button>
+		</div>
+		</div>
+	</div>
+</div>
 
+<!-- LOGIN DE USUARIO -->
+<div id="loginUsuario" class="modal fade" tabindex="-1" role="dialog">
+	<div class="modal-dialog">
+		<div class="modal-content">
+			<div class="modal-header">
+				<button type="button" class="close" data-dismiss="modal">×</button>
+				<h3>Login de Usuario</h3>
+			</div>
+			<div class="modal-body">
+				<div class="row">
+	                <div class="col-md-12 col-xs-10">
+	                    	<h4>Datos de Usuario</h4>
+	                    <p>Correo
+	                        <input type="text" class="col-xs-7 form-control" id="loginCorreo"
+	                        autocomplete="on"/>
+	                    </p>
+	                    <p>Contraseña
+	                        <input type="password" class="col-xs-7 form-control" id="loginPass"/>
+	                    </p>
+	                </div>
+	            </div>
+			</div>
+			<div class="modal-footer">
+				<button class="btn" data-dismiss="modal">Close</button>
+				<button type="button" class="btn btn-primary" onclick="IniciarSesion()">Confirmar</button>
+			</div>
+		</div>
+	</div>
+</div>
 
 <script src="js/jquery-ui.js"></script>
 <script src="js/globalesProyecto.js"></script>
 <script src="js/Prototipos.js"></script>
 <script src="js/Inicio.js"></script>
 <script src="js/holder.js"></script>
+<script src="js/blockUI.js"></script>
 <script src="js/bootstrap.js"></script>
 <script src="js/bootstrap-select.min.js"></script>
 <script src="js/Objetos.js"></script>
