--- a/Implementacion/ModuloServidor/SERVER-MODULE-PRESENTATION/WebContent/index.html
+++ b/Implementacion/ModuloServidor/SERVER-MODULE-PRESENTATION/WebContent/index.html
@@ -32,7 +32,7 @@
   <div class="collapse navbar-collapse navbar-ex1-collapse"> 
     <ul class="navbar-form navbar-left" role="search">
 		<div class="form-group col-xs-6">
-			<input id="input-busqueda" type="search" class="form-control input-md" placeholder="Buscar">
+			<input id="input-busqueda" type="search" class="form-control input-md" placeholder="Buscar" style="height: initial;">
 		</div>
 		<ul class="btn-group">
 			<button onclick="buscarContenidos();" class="btn btn-primary" style="margin-top: initial;">
@@ -63,7 +63,7 @@
 		<h2 class="col-md-12 pull-right styleTits" style="color:black; text-align: left;">Aplicaciones</h2>
 	</div>
 	<div class="col-md-12 separador"></div>
-	<div class="row centerContent">
+	<div class="container">
 		<div id="aplicacion1"  class="col-sm-5 col-md-3">
 			<div class="thumbnail">
 				<img src="img/mu1.jpg" alt="img/mu1.jpg" class="img-thumbnail miniatura img-responsive">
@@ -131,7 +131,7 @@
 		<h2 class="col-md-12 pull-right styleTits" style="color:white; text-align: right;">Libros</h2>
 	</div>
 	<div class="col-md-12 separador"></div>
-	<div class="row centerContent">
+	<div class="container">
 		<div id="libro1"  class="col-sm-5 col-md-3">
 			<div class="thumbnail">
 				<img src="img/li1.jpg" alt="img/mu1.jpg" class="img-thumbnail miniatura img-responsive">
@@ -200,7 +200,7 @@
 	</div>
 	<div class="col-md-12 separador"></div>
 	
-	<div class="row centerContent">
+	<div class="container">
 		<div id="video1"  class="col-sm-5 col-md-3">
 			<div class="thumbnail">
 				<img src="img/mu1.jpg" alt="img/mu1.jpg" class="img-thumbnail miniatura img-responsive">
@@ -269,7 +269,7 @@
 		<h2 class="col-md-12 pull-right styleTits" style="text-align: right;">Musica</h2>
 	</div>
 	<div class="col-md-12 separador"></div>
-	<div class="row centerContent">
+	<div class="container">
 		<div id="musica1"  class="col-sm-5 col-md-3">
 			<div class="thumbnail">
 				<img src="img/mu1.jpg" alt="img/mu1.jpg" class="img-thumbnail miniatura img-responsive">
@@ -450,7 +450,7 @@
             </tr>
         </tbody>
     </table>
-    <div class="pagination pagination-mini" style="text-align:center">
+    <div class="pagination pagination-mini" style="display: initial;">
         <ul class="pager">
             <li><a href="#">1</a>
             </li>
