--- a/Implementacion/ModuloServidor/SERVER-MODULE-PRESENTATION/WebContent/index.html
+++ b/Implementacion/ModuloServidor/SERVER-MODULE-PRESENTATION/WebContent/index.html
@@ -48,9 +48,9 @@
 		</ul>
 		<button class="btn btn-primary barraBusquedaHome" onclick="mostrarElemento('loginUsuario',true)">Login</button>
     </ul>
-	<ul class="col-md-2 pull-right" id="Nick-Logout-Div" hidden>
-		<a href="#" class="nick">nick</a>
-		<a href="#" onclick="logoutUsuario()">(Logout)</a>
+	<ul class="nav navbar-nav navbar-right" id="Nick-Logout-Div" style="display: none;margin-right: initial;margin-top: 0.7em;" hidden>
+        <a class="nick" role="button" href="#"><i class="glyphicon glyphicon-user"></i> nick </a>
+		<a href="#" onclick="logoutUsuario()"><i class="glyphicon glyphicon-lock"></i> Logout</a>
 	</ul>
 </nav>
 
